chore: 🤖 upgrade docusaurus to fix live

--- a/apps/docs/content/packages/demo-ad-hoc-page.mdx
+++ b/apps/docs/content/packages/demo-ad-hoc-page.mdx
@@ -29,7 +29,7 @@ type Day = 'Monday' | 'Tuesday' | 'Wednesday' | 'Thursday' | 'Friday' | 'Saturda
 
 ## Playground (React)
 
-```jsx
+```jsx live
 function Clock(props) {
   const [date, setDate] = useState(new Date());
   useEffect(() => {
