--- a/design-toolkit/components/src/components/tree/tree.docs.mdx
+++ b/design-toolkit/components/src/components/tree/tree.docs.mdx
@@ -22,5 +22,20 @@ provided, the tree will assume that drag and drop is disabled.
 
 The `<Tree.Item>` component displays a single item in the tree.
 
-## Tree.Node
+## Tree State and Recursion
+
+### UseTree
+
+This is an optional recusive component that you can use with the also optional `useTree` hook. They are designed as helpers to make tree state management and recursion simpler to work with.
+
+### Tree.Node
+
+
+## Manual management of state
+
+You can opt out of using these helpers by using the `TreeItem` directly and recursing over your data structure with something like the following:
+
+```
+// example of recursive mapping with a data structure
+```
 
