--- a/design-toolkit/components/src/components/navigation-stack/navigation-stack.docs.mdx
+++ b/design-toolkit/components/src/components/navigation-stack/navigation-stack.docs.mdx
@@ -62,7 +62,7 @@ The most important prop for the NavigationStack.Trigger is `for`. This dictates 
 - `[any combination of the above]`: Each value will rules as stated above. Each event will be fired in sequence in the order provided.
 
 ## Implementation Notes
-To gaurantee uniqueness of ids across an application, the NavigationStack implements Tagged UUID strings. This is also validated and will throw an error if a non-UUID is passed in.
+To guarantee uniqueness of ids across an application, the NavigationStack implements Tagged UUID strings. This is also validated and will throw an error if a non-UUID is passed in.
 
 Tagged (aka Branded) types: [https://github.com/sindresorhus/type-fest/blob/main/source/tagged.d.ts](https://github.com/sindresorhus/type-fest/blob/main/source/tagged.d.ts)
 
