docs: ✏️ update name

--- a/design-toolkit/components/src/components/view-stack/view-stack.docs.mdx
+++ b/design-toolkit/components/src/components/view-stack/view-stack.docs.mdx
@@ -10,9 +10,9 @@ The ViewStack component allows you to manage a stack of views. Think of it as si
 
 It is composed of the following components:
 
-- **NavigationStack** - parent that encapsulates all the views and triggers
-- **NavigationStack.View** - content view container
-- **NavigationStack.Trigger** - fires a stack or view action
+- **ViewStack** - parent that encapsulates all the views and triggers
+- **ViewStack.View** - content view container
+- **ViewStack.Trigger** - fires a stack or view action
 
 The ViewStack has no inherent sense of style or layout. It simply displays the current view, if there is one. There's a limit of a single active view per stack, but stacks can also be nested to create more complex combinations of views.
 
